--- a/jhipster/src/main/webapp/app/entities/san-xuat-hang-ngay/update/san-xuat-hang-ngay-update.component.html
+++ b/jhipster/src/main/webapp/app/entities/san-xuat-hang-ngay/update/san-xuat-hang-ngay-update.component.html
@@ -3,8 +3,8 @@
     <form name="editFormSXHN" role="form" novalidate (ngSubmit)="save()" [formGroup]="editFormSXHN">
       <h2 id="jhi-san-xuat-hang-ngay-heading" data-cy="SanXuatHangNgayCreateUpdateHeading">Thêm mới sản xuất hàng ngày</h2>
 
-      <header>
-        <div>
+      <header class="header-sxhn">
+        <div class="input-sxhn">
           <label class="form-label" for="field_maSanPham">
             <p>Mã sản phẩm</p>
           </label>
@@ -17,7 +17,7 @@
           </select>
         </div>
       
-        <div>
+        <div class="input-sxhn">
           <label for="">
             <p>Tên sản phẩm</p>
           </label>
